--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Manual do Jovem</title>
-  <link rel="stylesheet" href="./src/View/css/globalStyle.css">
-  <link rel="stylesheet" href="./src/View/css/index.css">
-  <link rel="icon" href="./src/View/img/logo.png">
+  <link rel="stylesheet" href="./View/css/globalStyle.css">
+  <link rel="stylesheet" href="./View/css/index.css">
+  <link rel="icon" href="./View/img/logo.png">
 </head>
 <body>
   <main>
@@ -40,6 +40,6 @@
   <footer>
     <p>&copy; 2025 Desenvolvido por TDS. Todos os direitos reservados.</p>
   </footer>
-  <script src="./src/View/js/logIn.js"></script>
+  <script src="./View/js/logIn.js"></script>
 </body>
 </html>
