--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
   </header>
 
-  <main id="container">
+  <main class="container">
 
     <div class="infos" id="filho1">
       <figure>
@@ -41,13 +41,13 @@
 
     <div class="infos" id="filho2">
       <form action="" id="loginForm">
-        <input type="text" id="usuario" placeholder="Login">
-        <input type="text" id="senha" placeholder="Senha">
-        <button id="entrarConta">Entrar</button>
+        <input type="email" id="email" placeholder="email" class="inputsInfos">
+        <input type="password" id="senha" placeholder="senha" class="inputsInfos">
+        <button id="entrarConta" class="buttonTheme">Entrar</button>
         <p id="outraOpcao">Ou</p>
-        <button id="criarConta">Começar agora!</button>
       </form>
-      <a id="esquecisenha" href="./src/View/redefinir.html">Esqueci a senha<a>
+      <a href="./View/cadastroUsuario.html" id="criarConta"><button class="buttonTheme">Cadastre-se</button></a>
+      <a id="esquecisenha" href="./View/redefinir.html">Esqueci a senha<a>
     </div>
     <footer>
       <p>&copy; 2025 Desenvolvido por TDS. Todos os direitos reservados.</p>
